--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col center-flex">
                     <div class="image">
-                        <img src="/Templete_1/media/imgs/valley-XXlarge.jpeg" alt="">
+                        <img src="/media/imgs/valley-XXlarge.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -138,21 +138,21 @@
             <p>Work Not Talk</p>
             <div class="portfolio-content">
                 <div class="project small-shadow-r">
-                    <img src="/Templete_1/media/imgs/mountain_2.jpeg" alt="">
+                    <img src="/media/imgs/mountain_2.jpeg" alt="">
                     <div class="text">
                         <h3>project 1</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="project small-shadow-m">
-                    <img src="/Templete_1/media/imgs/mountain_2.jpeg" alt="">
+                    <img src="/media/imgs/mountain_2.jpeg" alt="">
                     <div class="text">
                         <h3>project 2</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="project small-shadow-l">
-                    <img src="/Templete_1/media/imgs/mountain_2.jpeg" alt="">
+                    <img src="/media/imgs/mountain_2.jpeg" alt="">
                     <div class="text">
                         <h3>project 3</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -169,7 +169,7 @@
             <p>Knowledge Means Power</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="/Templete_1/media/imgs/valley-XXlarge.jpeg" alt="">
+                    <img src="/media/imgs/valley-XXlarge.jpeg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellat dolor molestias non!
