--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <!-- End about -->
     <!-- Start Contact -->
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="container">
             <h3 class="special-heading">contact</h3>
             <p>You Start and We End</p>
